k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-service
  labels:
    app: frontend-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-service
  template:
    metadata:
      labels:
        app: frontend-service
    spec:
      containers:
        - name: frontend-service
          image: frontend-service:0.0.1-SNAPSHOT
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /actuator/health/liveness
              port: 8082
            initialDelaySeconds: 1000
            periodSeconds: 5
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /actuator/health/readiness
              port: 8082
            initialDelaySeconds: 1000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend-service
spec:
  ports:
    - port: 8082
  selector:
    app: frontend-service
