k8s/task.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-service
  labels:
    app: task-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-service
  template:
    metadata:
      labels:
        app: task-service
    spec:
      containers:
        - name: task-service
          image: task-webflux-service:0.0.1-SNAPSHOT
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /actuator/health/liveness
              port: 8083
            initialDelaySeconds: 1000
            periodSeconds: 5
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /actuator/health/readiness
              port: 8083
            initialDelaySeconds: 1000
---
apiVersion: v1
kind: Service
metadata:
  name: task-service
  labels:
    app: task-service
spec:
  ports:
    - port: 8083
  selector:
    app: task-service
