k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  defaultBackend:
    service:
      name: gateway-service
      port:
        number: 8080
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: gateway-service
                port:
                  number: 8080
